package com.jefisu.contacts.core.presentation.util

object TestTag {

    const val FAB = "FAB_TEST"
    const val FIELD_NAME = "FIELD_NAME_TEST"
    const val FIELD_PHONE = "FIELD_PHONE_TEST"
    const val FIELD_EMAIL = "FIELD_EMAIL_TEST"
}