...
                        .fillMaxSize()
                        .padding(8.dp),
                ) {
                    BottomIconButton(
                        text = "Edit",
                        icon = Icons.Default.Edit,
                        description = "Edit contact information",
                        onClick = {
                            navController.navigate(Screen.AddEdit.navArg(contact.id))
                        },
                        isFavorite = false
                    )
                    BottomIconButton(
...
