...
        ) {
            BottomButton(
                text = "Cancel",
                onClick = navController::navigateUp
            )
            BottomButton(
                text = "Save",
                onClick = { viewModel.onEvent(AddEditEvent.AddContact) }
            )
        }
    }
}
